--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "dependencies": {
     "dotenv": "^16.4.5",
+    "electron": "^31.2.1",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.52.7"
+  },
+  "name": "video-cutter",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^24.0.0"
   }
 }
