--- a/package.json
+++ b/package.json
@@ -1,18 +1,40 @@
 {
   "dependencies": {
     "dotenv": "^16.4.5",
-    "electron": "^31.2.1",
+    "electron-packager": "^17.1.2",
     "ffmpeg": "^0.0.4",
-    "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.52.7"
   },
   "name": "video-cutter",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-packager . video-cutter --platform=win32 --arch=x64 --out=dist/ --overwrite",
+    "build": "electron-builder"
   },
   "devDependencies": {
-    "electron": "^24.0.0"
+    "electron": "^25.9.8",
+    "electron-builder": "^24.13.3",
+    "fluent-ffmpeg": "^2.1.3"
+  },
+  "build": {
+    "appId": "com.example.video-cutter",
+    "productName": "Video Cutter",
+    "files": [
+      "main.js",
+      "renderer.js",
+      "index.html",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true
+    }
   }
 }
