pronto para pack exe

--- a/package.json
+++ b/package.json
@@ -1,40 +1,22 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "electron-packager": "^17.1.2",
-    "ffmpeg": "^0.0.4",
-    "openai": "^4.52.7"
-  },
-  "name": "video-cutter",
+  "name": "videotools",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "pack": "electron-packager . video-cutter --platform=win32 --arch=x64 --out=dist/ --overwrite",
-    "build": "electron-builder"
+    "pack": "electron-builder",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "electron": "^25.9.8",
-    "electron-builder": "^24.13.3",
-    "fluent-ffmpeg": "^2.1.3"
+    "electron": "^31.2.1",
+    "electron-builder": "^24.13.3"
   },
-  "build": {
-    "appId": "com.example.video-cutter",
-    "productName": "Video Cutter",
-    "files": [
-      "main.js",
-      "renderer.js",
-      "index.html",
-      "node_modules/**/*",
-      "package.json"
-    ],
-    "win": {
-      "target": "nsis"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "allowToChangeInstallationDirectory": true
-    }
+  "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
+    "fluent-ffmpeg": "^2.1.3"
   }
 }
